--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: mcreportRTMB
 Title: Interface with RTMB to take posterior samples of derived quantities.
-Version: 0.1.8
+Version: 0.1.9
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Ethan", "Lawler", , "lawlerem@gmail.com", role = c("aut", "cre"))
 Description: Interface with RTMB to take posterior samples of derived quantities.
 License: GPL (>= 3)
 Encoding: UTF-8
